# rmf_workcell

./: .gitignore  Cargo.toml
.github/workflows/: ci_linux.yaml  ci_web.yaml  ci_windows.yaml  style.yaml
assets/demo_workcells/: demo.workcell.json
rmf_workcell_editor/: Cargo.toml  package.xml
rmf_workcell_editor/src/: demo_world.rs  keyboard.rs  lib.rs  main.rs  main_menu.rs  shapes.rs  view_menu.rs  workspace.rs
rmf_workcell_editor/src/interaction/: mod.rs  select.rs
rmf_workcell_editor/src/interaction/select/: place_object.rs  place_object_3d.rs  replace_parent_3d.rs
rmf_workcell_editor/src/widgets/: creation.rs  fuel_asset_browser.rs  menu_bar.rs  mod.rs  properties_panel.rs
rmf_workcell_editor/src/widgets/inspector/: inspect_joint.rs  inspect_name.rs  inspect_workcell_parent.rs  mod.rs
rmf_workcell_editor/src/workcell/: frame.rs  joint.rs  load.rs  menu.rs  mod.rs  model.rs  save.rs  workcell.rs
rmf_workcell_editor/src/workcell/urdf_package_exporter/: generate_package.rs
rmf_workcell_format/: Cargo.toml  package.xml
rmf_workcell_format/src/: geometry.rs  inertial.rs  joint.rs  lib.rs  workcell.rs
scripts/: build-web.sh
web/: index.html
