[package]
name = "rmf_workcell_editor"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "librmf_workcell_editor"

[[bin]]
path = "src/main.rs"
name = "rmf_workcell_editor"

[dependencies]
# PR merged after 0.10 but not released yet, bump to 0.10.1 once merged
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", rev = "86018dd" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.87"
bevy = { version = "0.12", features = ["pnm", "jpeg", "tga"] }
thiserror = "*"
rmf_workcell_format = { path = "../rmf_workcell_format", features = ["bevy_support"] }
rmf_site_editor = { git = "https://github.com/open-rmf/rmf_site", rev = "fe86373"}
urdf-rs = "0.7"
yaserde = "0.7"
tera = "1.19.1"
anyhow = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.0.10", features = ["color", "derive", "help", "usage", "suggestions"] }
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "main" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "main", features = ["single_threaded_async"]}
