[package]
name = "rmf_workcell_format"
version = "0.0.1"
edition = "2021"
authors = ["Luca Della Vedova <lucadv@intrinsic.ai>"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "*"
ron = "0.8"
thiserror = "*"
glam = { version = "0.24", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
# add features=["bevy"] to a dependent Cargo.toml to get the bevy-related features
# We depend on a bugfix released specifically in 0.7.3
bevy = { version = "0.12", optional = true }
rmf_site_format = { path = "../../rmf_site/rmf_site_format", features = ["bevy"]}
yaserde = "0.7"
urdf-rs = "0.7.3"
# Used for lazy initialization of static variable when they are non const
once_cell = "1"
pathdiff = "*"

[dev-dependencies]
float_eq = "1.0"
